Overflow fix v2

--- a/src/index.css
+++ b/src/index.css
@@ -6,8 +6,6 @@ body {
   height: 100%;
   font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   overscroll-behavior-y: none;
-  position: fixed;
-  overflow: hidden;
 }
 
 :root {
